@@ -18,6 +18,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+server/apply.c, doc/crossfire.doc:  Fix to prevent server crashes when monster
+applies poison object.  doc file is updated to include accurate information on
+values in poison object.  Patch by Jan Echternach, applied & checked in by
+Mark Wedel, 4/11/2000
+
 CREDITS, server/main.c:  Add Peter Gardner to list of credits.
 Mark Wedel 4/4/2000
 
